--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,9 +16,49 @@ env:
   IMAGE_NAME: lukas8219/rinha-de-backend-2025
 
 jobs:
+  validate-ssh-key:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Setup SSH Agent
+        uses: webfactory/ssh-agent@v0.9.1
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+      - name: Test SSH connection to GitHub
+        run: |
+          echo "🔑 Testing SSH connection to GitHub..."
+          
+          # Test basic GitHub SSH connection
+          SSH_OUTPUT=$(ssh -T git@github.com 2>&1 || true)
+          echo "SSH Output: $SSH_OUTPUT"
+          
+          # Check if authentication was successful
+          if echo "$SSH_OUTPUT" | grep -q "successfully authenticated"; then
+            echo "✅ SSH key is valid for GitHub"
+            
+            # Extract username from the output
+            USERNAME=$(echo "$SSH_OUTPUT" | grep "successfully authenticated" | sed 's/.*Hi \([^!]*\)!.*/\1/')
+            echo "🎉 Authenticated as: $USERNAME"
+          else
+            echo "❌ SSH key validation failed"
+            echo "Expected to see 'successfully authenticated' in the output"
+            echo "Actual output: $SSH_OUTPUT"
+            exit 1
+          fi
+          
+          echo "🔍 Testing access to fork repository..."
+          # Test if we can access the specific repository
+          git ls-remote git@github.com:lukas8219/rinha-de-backend-2026.git HEAD > /dev/null 2>&1 && {
+            echo "✅ Successfully accessed fork repository"
+          } || {
+            echo "❌ Cannot access fork repository - check if SSH key has proper permissions"
+            exit 1
+          }
+
   build-and-push:
     runs-on: ubuntu-latest
-
+    needs: validate-ssh-key
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -62,7 +102,7 @@ jobs:
 
   update-fork:
     runs-on: ubuntu-latest
-    needs: build-and-push
+    needs: [validate-ssh-key, build-and-push]
     
     steps:
       - name: Checkout current repository
@@ -72,7 +112,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: lukas8219/rinha-de-backend-2026
-          token: ${{ secrets.GITHUB_TOKEN }}
+          ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
           path: fork-repo
 
       - name: Generate branch name
@@ -87,7 +127,6 @@ jobs:
           cd fork-repo
           git config user.name "GitHub Actions[lukas8219]"
           git config user.email "lukas8219@gmail.com"
-          git remote set-url origin https://${{ secrets.GITHUB_TOKEN }}@github.com/lukas8219/rinha-de-backend-2026.git
 
       - name: Create and checkout new branch
         run: |
