--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -59,6 +59,9 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     needs: validate-ssh-key
+    outputs:
+      app-image-tag: ${{ steps.set_outputs.outputs.app-image-tag }}
+      worker-image-tag: ${{ steps.set_outputs.outputs.worker-image-tag }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -100,6 +103,19 @@ jobs:
           push: true
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-worker:latest, ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-worker:${{ steps.gen_tag.outputs.tag }}
 
+      - name: Set image tag outputs
+        id: set_outputs
+        run: |
+          APP_IMAGE_TAG="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-app:${{ steps.gen_tag.outputs.tag }}"
+          WORKER_IMAGE_TAG="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-worker:${{ steps.gen_tag.outputs.tag }}"
+          
+          echo "app-image-tag=$APP_IMAGE_TAG" >> $GITHUB_OUTPUT
+          echo "worker-image-tag=$WORKER_IMAGE_TAG" >> $GITHUB_OUTPUT
+          
+          echo "📦 Generated image tags:"
+          echo "  App image: $APP_IMAGE_TAG"
+          echo "  Worker image: $WORKER_IMAGE_TAG"
+
   update-fork:
     runs-on: ubuntu-latest
     needs: [validate-ssh-key, build-and-push]
@@ -133,6 +149,47 @@ jobs:
           cd fork-repo
           git checkout -b ${{ env.BRANCH_NAME }}
 
+
+      - name: Create modified docker-compose with image tags
+        run: |
+          APP_IMAGE="${{ needs.build-and-push.outputs.app-image-tag }}"
+          WORKER_IMAGE="${{ needs.build-and-push.outputs.worker-image-tag }}"
+          
+          echo "🔧 Creating modified docker-compose.yaml with image tags:"
+          echo "  App services will use: $APP_IMAGE"
+          echo "  Worker service will use: $WORKER_IMAGE"
+          
+          # Install yq if not available
+          if ! command -v yq &> /dev/null; then
+            echo "📦 Installing yq..."
+            sudo wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
+            sudo chmod +x /usr/local/bin/yq
+          fi
+          
+          # Copy original file
+          cp docker-compose.yaml docker-compose-modified.yaml
+          
+          # Remove build sections and add image tags using yq
+          echo "🔧 Modifying docker-compose.yaml with yq..."
+          
+          # For app1 service (base app definition)
+          yq eval 'del(.services.app1.build)' -i docker-compose-modified.yaml
+          yq eval ".services.app1.image = \"$APP_IMAGE\"" -i docker-compose-modified.yaml
+          
+          # For consumer service 
+          yq eval 'del(.services.consumer.build)' -i docker-compose-modified.yaml
+          yq eval ".services.consumer.image = \"$WORKER_IMAGE\"" -i docker-compose-modified.yaml
+          
+          echo "✅ Modified docker-compose.yaml created"
+          
+          # Show a preview of the changes made
+          echo ""
+          echo "📋 Preview of modified services:"
+          echo "--- app1 service ---"
+          yq eval '.services.app1 | {"image": .image}' docker-compose-modified.yaml
+          echo "--- consumer service ---"  
+          yq eval '.services.consumer | {"image": .image}' docker-compose-modified.yaml
+
       - name: Clean up files and update docker-compose
         run: |
           cd fork-repo
@@ -146,10 +203,10 @@ jobs:
             mkdir -p participantes/luucaspole-crystal
           fi
           
-          # Copy docker-compose.yaml from current repo to fork
-          cp ../docker-compose.yaml participantes/luucaspole-crystal/docker-compose.yaml
+          # Copy modified docker-compose.yaml and nginx.conf from current repo to fork
+          cp ../docker-compose-modified.yaml participantes/luucaspole-crystal/docker-compose.yaml
           cp ../nginx.conf participantes/luucaspole-crystal/nginx.conf
-          echo "Updated docker-compose.yaml in participantes/luucaspole-crystal/"
+          echo "Updated docker-compose.yaml with production image tags in participantes/luucaspole-crystal/"
 
       - name: Commit and push changes
         run: |
@@ -161,34 +218,12 @@ jobs:
             git commit -m "chore(participantes/luucaspole-crystal): retest + use latest configuration and version
             
             - Removed *.logs and *.json files from participantes/luucaspole-crystal/
-            - Updated docker-compose.yaml with latest version
+            - Updated docker-compose.yaml with production image tags
+            - App image: ${{ needs.build-and-push.outputs.app-image-tag }}
+            - Worker image: ${{ needs.build-and-push.outputs.worker-image-tag }}
             - Updated nginx.conf with latest version
             - Generated from SHA: ${{ github.sha }}"
             
             git push origin ${{ env.BRANCH_NAME }}
             echo "Changes pushed to branch: ${{ env.BRANCH_NAME }}"
           fi
-
-      - name: Create Pull Request
-        if: success()
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            try {
-              const response = await github.rest.pulls.create({
-                owner: 'zanfranceschi',
-                repo: 'rinha-de-backend-2025',
-                title: 'chore(participantes/luucaspole-crystal): retest + use latest configuration and version',
-                head: 'lukas8219:${{ env.BRANCH_NAME }}',
-                base: 'main'
-              });
-            } catch (error) {
-              if (error.message.includes('A pull request already exists')) {
-                console.log('A pull request already exists for this branch');
-              } else {
-                console.error('Error creating pull request:', error);
-                throw error;
-              }
-            }
-
